copypaste mortgage calc

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 <h4>This is heading 4</h4>
 <h5>This is heading 5</h5>
 <h6>This is heading 6</h6>
+  
+  <div class="smpc-div">
+                    <form name="mortgagecalc" method="POST">
+                        <p>How much will you be borrowing?<br>
+                        <input type="text" onkeypress="return validNumber(event)" name="loan" size="10"> <span class="smpc-error" id="loanError"></span></p>
+                        <p>What will be the term of this mortgage (in years)?<br>
+                        <input type="text" onkeypress="return validNumber(event)" name="years" size="5"> <span class="smpc-error" id="yearsError"></span></p>
+                        <p>What will be the interest rate?<br>
+                        <input type="text" onkeypress="return validNumber(event)" name="rate" size="5"> <span class="smpc-error" id="rateError"></span></p>
+                        <input type="button" onclick="return myPayment()" value="Calculate">&nbsp;&nbsp;<input type="button" onclick="return myPaymentReset()" value="Reset">
+                    </form>
+                    <small>Instructions: Enter numbers and decimal points. No commas or other characters.</small>
+                    <p class="smpc-monthlypayment" id="monthlyPayment">&nbsp;</p>
+                    <p class="smpc-friendlyreminder" id="friendlyReminder">This is your principal + interest payment, or in other words, what you send to the bank each month. But remember, you will also have to
+                    budget for homeowners insurance, real estate taxes, and if you are unable to afford a 20% down payment, Private Mortgage Insurance (PMI).
+                    These additional costs could increase your monthly outlay by as much 50%, sometimes more.</p>
+                    <!-- Advertisement here -->
+                    <!-- Artcle advertisement here -->
+<div class="text-center">
+<script type="text/javascript">google_ad_client="ca-pub-4350951335182466";google_ad_slot="2181054417";google_ad_width=336;google_ad_height=280;</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+</div>                </div>
 
 </body>
 </html>
