--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 <script type="text/javascript">google_ad_client="ca-pub-4350951335182466";google_ad_slot="2181054417";google_ad_width=336;google_ad_height=280;</script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
 </div>                </div>
+  
+  
+   <script src="js/mortgage-calculator.js"></script>
 
 </body>
 </html>
