--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>                </div>
   
   
-   <script src="js/mortgage-calculator.js"></script>
+   <script src="reCalculator.js"></script>
 
 </body>
 </html>
