--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h1>This is heading 1</h1>
-<h2>This is heading 2</h2>
-<h3>This is heading 3</h3>
-<h4>This is heading 4</h4>
-<h5>This is heading 5</h5>
-<h6>This is heading 6</h6>
   
   <div class="smpc-div">
                     <form name="mortgagecalc" method="POST">
@@ -24,12 +17,7 @@
                     <p class="smpc-friendlyreminder" id="friendlyReminder">This is your principal + interest payment, or in other words, what you send to the bank each month. But remember, you will also have to
                     budget for homeowners insurance, real estate taxes, and if you are unable to afford a 20% down payment, Private Mortgage Insurance (PMI).
                     These additional costs could increase your monthly outlay by as much 50%, sometimes more.</p>
-                    <!-- Advertisement here -->
-                    <!-- Artcle advertisement here -->
-<div class="text-center">
-<script type="text/javascript">google_ad_client="ca-pub-4350951335182466";google_ad_slot="2181054417";google_ad_width=336;google_ad_height=280;</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
-</div>                </div>
+</div>
   
   
    <script src="reCalculator.js"></script>
