--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 </div>
 
 </fieldset>
+  
+  
+<!-- Button -->
+<div class="form-group">
+
+  <div class="col-md-4">
+    <button id="singlebutton" name="singlebutton" class="btn btn-primary">Reset</button>
+  </div>
+</div>
+
 </form>
 
 
